--- a/assets/languages/fa.json
+++ b/assets/languages/fa.json
@@ -2,7 +2,7 @@
     "language": {
         "name": "فارسی",
         "code": "fa",
-        "flag": "🇮🇷",
+        "flag": "🦁",
         "direction": "rtl"
     },
     "app": {
@@ -349,7 +349,7 @@
         "welcome_subtitle": "یک VPN متن‌باز که سریع، نامحدود، امن و کاملاً رایگان است.",
         "privacy_title": "حریم خصوصی شما مهم است",
         "privacy_subtitle": "ما فعالیت آنلاین شما را دنبال، ذخیره یا به اشتراک نمی‌گذاریم. فعالیت آنلاین شما خصوصی و امن باقی می‌ماند.",
-        "i_accept": "من ",
+        "i_accept": "من تایید میکنم ",
         "and": " و ",
         "could_not_open_privacy": "نمی‌توان سیاست حریم خصوصی را باز کرد",
         "could_not_open_terms": "نمی‌توان شرایط خدمات را باز کرد",
